# hyprscrollexpo

./: .gitignore  .gitmodules  CMakeLists.txt  ExpoGesture.cpp  IOverview.hpp  Makefile  README.md  globals.hpp  hyprpm.toml  main.cpp  overview.cpp  overview.hpp  scrollOverview.cpp  scrollOverview.hpp
